Updated README.md with repo info